# ipfs-evm-storage

./: README.md
js-interface/: README.md  abi.json  index.html  script.js
php-interface/: README.md  composer.json
php-interface/src/: contract-interactor.php  ipfs_uploader.php  main.php
py-interface/: README.md  contract_interactor.py  ipfs_uploader.py  main.py  requirements.txt
rust-interface/: Cargo.toml  README.md
rust-interface/src/: contract_interactor.rs  ipfs_uploader.rs  main.rs
solidity/: README.md  ipfs-uploader.sol
ts-interface/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
ts-interface/src/: contractInteractor.ts  index.ts  ipfsUploader.ts
