[package]
name = "ipfs_uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
web3 = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["native-tls"]

[dependencies.web3]
version = "0.15.0"
features = ["rustls-tls", "async-std-tls"]
